<resources>
  <string name="app_name">Cartrack</string>
  <string name="username_label">username</string>
  <string name="password_label">password</string>
  <string name="login_label">login</string>
  <string name="retry">Retry</string>
  <string name="empty">No items available.</string>
  <string name="remember_me_label">Remember me</string>
  <string name="work_name">name: </string>
  <string name="work_catch_phrase">catch phrase: </string>
  <string name="work_bs">bs: </string>
  <string name="work_details">Company Details</string>
  <string name="select_user_from_list">Select a user from the list on the left.</string>
</resources>