<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    >

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/username_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_marginRight="32dp"
      android:hint="@string/username_label"
      app:layout_constraintBottom_toTopOf="@+id/password_layout"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.3"
      app:layout_constraintVertical_chainStyle="packed"
      app:startIconDrawable="@drawable/ic_baseline_account_box"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/password_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="32dp"
      android:layout_marginTop="8dp"
      android:layout_marginRight="32dp"
      android:hint="@string/password_label"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.5"
      app:layout_constraintStart_toStartOf="parent"
      app:passwordToggleEnabled="true"
      app:layout_constraintTop_toBottomOf="@+id/username_layout"
      app:startIconDrawable="@drawable/ic_baseline_lock"
      >

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.button.MaterialButton
      android:id="@+id/login_button"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      android:text="@string/login_label"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password_layout"
      />

  <ProgressBar
      android:visibility="gone"
      android:id="@+id/progress_circular"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      style="?android:attr/progressBarStyle"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:layout_marginEnd="16dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/password_layout"
      />

</androidx.constraintlayout.widget.ConstraintLayout>